--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Post-it Layers (PWA)</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#111827">
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Crect width='256' height='256' rx='48' fill='%23111827'/%3E%3Crect x='36' y='36' width='184' height='184' rx='20' fill='%23fde68a'/%3E%3C/svg%3E">
+  <link rel="icon" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHZpZXdCb3g9JzAgMCAyNTYgMjU2Jz4KPHJlY3Qgd2lkdGg9JzI1NicgaGVpZ2h0PScyNTYnIHJ4PSc0OCcgZmlsbD0nIzExMTgyNycvPgo8cmVjdCB4PSczNicgeT0nMzYnIHdpZHRoPScxODQnIGhlaWdodD0nMTg0JyByeD0nMjAnIGZpbGw9JyNmZGU2OGEnLz4KPC9zdmc+">
   <style>
     html, body, #root { height: 100%; margin: 0; }
-    body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, 'Helvetica Neue', Arial, 'Apple Color Emoji', 'Segoe UI Emoji'; background: linear-gradient(#fafafa, #efefef); color: #111827; }
+    body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, 'Helvetica Neue', Arial; background: linear-gradient(#fafafa, #efefef); color: #111827; }
     .shadow { box-shadow: 0 10px 30px rgba(0,0,0,.08), 0 2px 6px rgba(0,0,0,.08); }
     .rounded-2xl { border-radius: 1rem; }
     .rounded-xl { border-radius: .75rem; }
@@ -17,7 +17,6 @@
     .btn { padding: .375rem .75rem; border: 1px solid rgba(0,0,0,.12); border-radius: .75rem; background: #fff8; backdrop-filter: blur(8px); cursor: pointer; }
     .btn:hover { background: #fff; }
     .panel { background: #fffE; backdrop-filter: blur(8px); }
-    .note { user-select: none; }
     .gridbg { background-size: 32px 32px; background-image:
       linear-gradient(to right, rgba(0,0,0,0.04) 1px, transparent 1px),
       linear-gradient(to bottom, rgba(0,0,0,0.04) 1px, transparent 1px);
@@ -28,7 +27,6 @@
 <body>
   <div id="root"></div>
 
-  <!-- React + Babel (for quick prototype; production would be bundled) -->
   <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -36,9 +34,7 @@
   <script type="text/babel">
     const { useEffect, useMemo, useRef, useState } = React;
 
-    function uid(prefix = "id") {
-      return `${prefix}_` + Math.random().toString(36).slice(2,9);
-    }
+    function uid(prefix = "id") { return prefix + "_" + Math.random().toString(36).slice(2,9); }
 
     const DEFAULT_NOTE_SIZE = { w: 180, h: 140 };
     const STORAGE_KEY = "postit_layers_app_v01";
@@ -48,23 +44,23 @@
       try {
         const raw = localStorage.getItem(STORAGE_KEY);
         if (raw) return JSON.parse(raw);
-      } catch {}
-      const layerA = { id: uid("layer"), name: "Estratégia", visible: true };
-      const layerB = { id: uid("layer"), name: "Tarefas", visible: true };
-      const layerC = { id: uid("layer"), name: "Inspirações", visible: false };
+      } catch (e) {}
+      const layerA = { id: uid("layer"), name: "Strategy", visible: true };
+      const layerB = { id: uid("layer"), name: "Tasks", visible: true };
+      const layerC = { id: uid("layer"), name: "Inspiration", visible: false };
 
       const n1 = { id: uid("note"), ownerLayerId: layerA.id, x: 100, y: 80,
-        text: "Visão geral do projeto\n— público-alvo\n— proposta de valor",
+        text: "Project overview\n— audience\n— value prop",
         color: COLORS[0], w: DEFAULT_NOTE_SIZE.w, h: DEFAULT_NOTE_SIZE.h,
-        styleOverrides: { [layerB.id]: { visible: true, color: COLORS[2], opacity: .9 } } };
+        styleOverrides: (function(){ var o={}; o[layerB.id]={ visible: true, color: COLORS[2], opacity: .9 }; return o; })() };
       const n2 = { id: uid("note"), ownerLayerId: layerB.id, x: 420, y: 220,
-        text: "MVP backlog\n- Canvas\n- Camadas\n- LocalStorage",
+        text: "MVP backlog\n- Canvas\n- Layers\n- LocalStorage",
         color: COLORS[1], w: DEFAULT_NOTE_SIZE.w, h: DEFAULT_NOTE_SIZE.h,
         styleOverrides: {} };
       const n3 = { id: uid("note"), ownerLayerId: layerA.id, x: 700, y: 120,
-        text: "Riscos\n- Escopo\n- Prazo\n- Dívida técnica",
+        text: "Risks\n- Scope\n- Schedule\n- Tech debt",
         color: COLORS[3], w: DEFAULT_NOTE_SIZE.w, h: DEFAULT_NOTE_SIZE.h,
-        styleOverrides: { [layerC.id]: { visible: true, opacity: .6 } } };
+        styleOverrides: (function(){ var o={}; o[layerC.id]={ visible: true, opacity: .6 }; return o; })() };
 
       return { layers: [layerA, layerB, layerC], notes: [n1, n2, n3], activeLayerId: layerA.id };
     }
@@ -74,12 +70,11 @@
       const { layers, notes, activeLayerId } = state;
 
       useEffect(() => {
-        try { localStorage.setItem(STORAGE_KEY, JSON.stringify(state)); } catch {}
+        try { localStorage.setItem(STORAGE_KEY, JSON.stringify(state)); } catch (e) {}
       }, [state]);
 
       const activeLayer = useMemo(() => layers.find(l => l.id === activeLayerId) || layers[0], [layers, activeLayerId]);
 
-      // camera / pan-zoom
       const canvasRef = useRef(null);
       const [camera, setCamera] = useState({ x: 0, y: 0, scale: 1 });
       const isPanningRef = useRef(false);
@@ -128,13 +123,19 @@
 
       const visibleLayerIds = useMemo(() => new Set(layers.filter(l => l.visible).map(l => l.id)), [layers]);
 
+      function getOverride(note, lid) {
+        return (note.styleOverrides && note.styleOverrides[lid]) ? note.styleOverrides[lid] : null;
+      }
+
       function noteEffectiveStyle(note) {
-        const a = note.styleOverrides?.[activeLayerId];
-        if (a?.visible) return { color: a.color ?? note.color, opacity: a.opacity ?? 1 };
+        const a = getOverride(note, activeLayerId);
+        if (a && a.visible) return { color: (a.color ? a.color : note.color), opacity: (a.opacity != null ? a.opacity : 1) };
         if (visibleLayerIds.has(note.ownerLayerId)) return { color: note.color, opacity: 1 };
-        for (const lid of Object.keys(note.styleOverrides || {})) {
-          const o = note.styleOverrides[lid];
-          if (visibleLayerIds.has(lid) && o.visible) return { color: o.color ?? note.color, opacity: o.opacity ?? 1 };
+        var keys = Object.keys(note.styleOverrides || {});
+        for (var i=0;i<keys.length;i++) {
+          var lid = keys[i];
+          var o = note.styleOverrides[lid];
+          if (visibleLayerIds.has(lid) && o.visible) return { color: (o.color ? o.color : note.color), opacity: (o.opacity != null ? o.opacity : 1) };
         }
         return null;
       }
@@ -168,10 +169,10 @@
           ownerLayerId: activeLayer.id,
           x: -camera.x + 100 / camera.scale,
           y: -camera.y + 100 / camera.scale,
-          text: "Novo post-it",
+          text: "New note",
           color: COLORS[Math.floor(Math.random() * COLORS.length)],
           w: DEFAULT_NOTE_SIZE.w, h: DEFAULT_NOTE_SIZE.h,
-          styleOverrides: {},
+          styleOverrides: {}
         };
         setNotes(arr => [...arr, newNote]);
       }
@@ -205,21 +206,23 @@
       function setActiveLayer(id) { setState(s => ({ ...s, activeLayerId: id })); }
       function toggleLayerVisibility(id) { setLayers(arr => arr.map(l => l.id === id ? { ...l, visible: !l.visible } : l)); }
       function addLayer() {
-        const name = prompt("Nome da camada:")?.trim();
-        if (!name) return;
-        const layer = { id: uid("layer"), name, visible: true };
+        const name = prompt("Layer name:") || "";
+        const trimmed = name.trim();
+        if (!trimmed) return;
+        const layer = { id: uid("layer"), name: trimmed, visible: true };
         setLayers(arr => [...arr, layer]);
         setActiveLayer(layer.id);
       }
       function renameLayer(layer) {
-        const name = prompt("Novo nome:", layer.name)?.trim();
-        if (!name) return;
-        setLayers(arr => arr.map(l => l.id === layer.id ? { ...l, name } : l));
+        const name = prompt("New name:", layer.name) || "";
+        const trimmed = name.trim();
+        if (!trimmed) return;
+        setLayers(arr => arr.map(l => l.id === layer.id ? { ...l, name: trimmed } : l));
       }
       function deleteLayer(layer) {
         const hasOwned = notes.some(n => n.ownerLayerId === layer.id);
-        if (hasOwned) { alert("Não é possível excluir: a camada possui post-its proprietários."); return; }
-        if (!confirm(`Excluir a camada "${layer.name}"?`)) return;
+        if (hasOwned) { alert("Cannot delete: layer owns notes."); return; }
+        if (!confirm('Delete layer "' + layer.name + '"?')) return;
         setLayers(arr => arr.filter(l => l.id !== layer.id));
         setNotes(arr => arr.map(n => {
           const copy = { ...n };
@@ -232,28 +235,37 @@
       }
       function referenceInActiveLayer(note) {
         if (!activeLayer) return;
-        if (note.ownerLayerId === activeLayer.id) { alert("Este post-it já pertence à camada ativa."); return; }
-        setNotes(arr => arr.map(n => n.id === note.id ? {
-          ...n, styleOverrides: { ...(n.styleOverrides || {}), [activeLayer.id]: { ...(n.styleOverrides?.[activeLayer.id] || {}), visible: true } }
-        } : n));
+        if (note.ownerLayerId === activeLayer.id) { alert("This note already belongs to the active layer."); return; }
+        setNotes(arr => arr.map(n => n.id === note.id ? (function() {
+          var ov = (n.styleOverrides ? { ...n.styleOverrides } : {});
+          var cur = ov[activeLayer.id] ? { ...ov[activeLayer.id] } : {};
+          cur.visible = true;
+          ov[activeLayer.id] = cur;
+          return { ...n, styleOverrides: ov };
+        })() : n));
       }
       function setColor(note, color) {
         if (activeLayer && note.ownerLayerId === activeLayer.id) {
           setNotes(arr => arr.map(n => n.id === note.id ? { ...n, color } : n));
         } else if (activeLayer) {
-          setNotes(arr => arr.map(n => n.id === note.id ? {
-            ...n, styleOverrides: { ...(n.styleOverrides || {}), [activeLayer.id]: { ...(n.styleOverrides?.[activeLayer.id] || {}), visible: true, color } }
-          } : n));
+          setNotes(arr => arr.map(n => n.id === note.id ? (function() {
+            var ov = (n.styleOverrides ? { ...n.styleOverrides } : {});
+            var cur = ov[activeLayer.id] ? { ...ov[activeLayer.id] } : {};
+            cur.visible = true; cur.color = color;
+            ov[activeLayer.id] = cur;
+            return { ...n, styleOverrides: ov };
+          })() : n));
         }
       }
       function toggleReferenceVisibility(note) {
         if (!activeLayer) return;
         setNotes(arr => arr.map(n => {
           if (n.id !== note.id) return n;
-          const ov = n.styleOverrides?.[activeLayer.id] || {};
-          const next = { ...n, styleOverrides: { ...(n.styleOverrides || {}) } };
-          next.styleOverrides[activeLayer.id] = { ...ov, visible: !ov.visible };
-          return next;
+          var ov = (n.styleOverrides && n.styleOverrides[activeLayer.id]) ? { ...n.styleOverrides[activeLayer.id] } : {};
+          ov.visible = !ov.visible;
+          var all = (n.styleOverrides ? { ...n.styleOverrides } : {});
+          all[activeLayer.id] = ov;
+          return { ...n, styleOverrides: all };
         }));
       }
 
@@ -262,25 +274,30 @@
         if (!style) return null;
         const screen = worldToScreen(note.x, note.y);
         return (
-          <div className="note absolute shadow rounded-xl border"
-            style={{ position: 'absolute', left: screen.x, top: screen.y, width: note.w * camera.scale, height: note.h * camera.scale, transform: 'translate(-50%, -50%)', background: style.color, opacity: style.opacity ?? 1, cursor: 'grab' }}
+          <div className="absolute shadow rounded-xl border"
+            style={{
+              position: 'absolute', left: screen.x, top: screen.y,
+              width: note.w * camera.scale, height: note.h * camera.scale,
+              transform: 'translate(-50%, -50%)', background: style.color,
+              opacity: (style.opacity != null ? style.opacity : 1), cursor: 'grab'
+            }}
             onMouseDown={(e) => startDragNote(note, e)}
           >
             <div style={{ display:'flex', alignItems:'center', justifyContent:'space-between', padding: '6px 10px', fontSize: 13, fontWeight: 600 }}>
               <span>{note.ownerLayerId === activeLayerId ? "(owner) " : ""}Post-it</span>
               <div style={{ display:'flex', gap: 6 }}>
-                <button className="btn" onClick={(e)=>{e.stopPropagation(); duplicateNote(note);}} title="Duplicar">⧉</button>
-                <button className="btn" onClick={(e)=>{e.stopPropagation(); referenceInActiveLayer(note);}} title="Referenciar">@</button>
-                <button className="btn" onClick={(e)=>{e.stopPropagation(); deleteNote(note);}} title="Excluir">✕</button>
+                <button className="btn" onClick={(e)=>{e.stopPropagation(); duplicateNote(note);}} title="Duplicate">⧉</button>
+                <button className="btn" onClick={(e)=>{e.stopPropagation(); referenceInActiveLayer(note);}} title="Reference">@</button>
+                <button className="btn" onClick={(e)=>{e.stopPropagation(); deleteNote(note);}} title="Delete">✕</button>
               </div>
             </div>
             <textarea
-              style={{ width:'100%', height: `calc(100% - 48px)`, padding: 10, border: 'none', outline: 'none', background: 'transparent', fontSize: 14 }}
+              style={{ width:'100%', height: 'calc(100% - 48px)', padding: 10, border: 'none', outline: 'none', background: 'transparent', fontSize: 14 }}
               value={note.text}
               onChange={(e)=> setNotes(arr => arr.map(n => n.id === note.id ? { ...n, text: e.target.value } : n))}
               onMouseDown={(e)=> e.stopPropagation()}
             />
-            <div title="Redimensionar" style={{ position:'absolute', bottom: 6, right: 6, width: 16, height: 16, background: '#fff8', border: '1px solid rgba(0,0,0,.2)', borderRadius: 4, cursor:'nwse-resize' }}
+            <div title="Resize" style={{ position:'absolute', bottom: 6, right: 6, width: 16, height: 16, background: '#fff8', border: '1px solid rgba(0,0,0,.2)', borderRadius: 4, cursor:'nwse-resize' }}
               onMouseDown={(e)=> resizeNote(note, e)}
             />
           </div>
@@ -303,25 +320,24 @@
         return (
           <div className="shadow rounded-2xl panel border" style={{ position:'fixed', top: 12, right: 12, zIndex: 50, width: 300, padding: 12 }}>
             <div style={{ display:'flex', alignItems:'center', justifyContent:'space-between', marginBottom: 8 }}>
-              <div style={{ fontSize: 14, fontWeight: 700 }}>Camadas</div>
-              <button className="btn" onClick={addLayer}>+ Nova</button>
+              <div style={{ fontSize: 14, fontWeight: 700 }}>Layers</div>
+              <button className="btn" onClick={addLayer}>+ New</button>
             </div>
             <div style={{ maxHeight: '60vh', overflow:'auto' }}>
               {layers.map(l => (
                 <div key={l.id} className="border rounded-xl" style={{ display:'flex', alignItems:'center', gap: 8, padding: 8, marginBottom: 8, background: activeLayerId === l.id ? 'rgba(0,0,0,.05)' : '#fff' }}>
-                  <input type="checkbox" checked={l.visible} onChange={()=> toggleLayerVisibility(l.id)} title="Mostrar/ocultar" />
-                  <button className="btn" style={{ flex: 1, textAlign:'left', fontWeight: activeLayerId === l.id ? 700 : 500 }} onClick={()=> setActiveLayer(l.id)} title="Ativar para edição">{l.name}</button>
-                  <button className="btn" onClick={()=> renameLayer(l)} title="Renomear">✎</button>
-                  <button className="btn" onClick={()=> deleteLayer(l)} title="Excluir">🗑</button>
+                  <input type="checkbox" checked={l.visible} onChange={()=> toggleLayerVisibility(l.id)} title="Show/Hide" />
+                  <button className="btn" style={{ flex: 1, textAlign:'left', fontWeight: activeLayerId === l.id ? 700 : 500 }} onClick={()=> setActiveLayer(l.id)} title="Activate">{l.name}</button>
+                  <button className="btn" onClick={()=> renameLayer(l)} title="Rename">✎</button>
+                  <button className="btn" onClick={()=> deleteLayer(l)} title="Delete">🗑</button>
                 </div>
               ))}
             </div>
             <div style={{ marginTop: 8, paddingTop: 8, borderTop: '1px solid rgba(0,0,0,.1)', fontSize: 12, color: 'rgba(0,0,0,.6)' }}>
-              <div>• Arraste o fundo para mover o quadro.</div>
-              <div>• Roda do mouse faz zoom.</div>
-              <div>• Post-it arrasta para mover (posição global).</div>
-              <div>• Use @ no cartão para referenciar na camada ativa.</div>
-              <div>• Cor base na camada dona; nas referências, só override.</div>
+              <div>• Drag background to pan · mouse wheel to zoom.</div>
+              <div>• Drag notes to move (global position).</div>
+              <div>• Use @ on card to reference into active layer.</div>
+              <div>• Base color on owner; reference overrides color only.</div>
             </div>
           </div>
         );
